--- a/plugins/dynamix/CacheSettings.page
+++ b/plugins/dynamix/CacheSettings.page
@@ -4,8 +4,8 @@ Tag="upload"
 Cond="((isset($disks['cache']))&&($disks['cache']['status']!='DISK_NP'))"
 ---
 <?PHP
-/* Copyright 2005-2017, Lime Technology
- * Copyright 2012-2017, Bergware International.
+/* Copyright 2005-2018, Lime Technology
+ * Copyright 2012-2018, Bergware International.
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License version 2,
@@ -15,7 +15,6 @@ Cond="((isset($disks['cache']))&&($disks['cache']['status']!='DISK_NP'))"
  * all copies or substantial portions of the Software.
  */
 ?>
-
 <? $disabled = $var['fsState']!='Stopped' ? 'disabled' : ''; ?>
 
 <script>
@@ -61,5 +60,5 @@ Min. free space:
 > **2000000** => 2,048,000,000 bytes
 
 &nbsp;
-: <input type="submit" name="changeShare" value="Apply" <?=$disabled?>><input type="button" value="Done" onclick="done()"><?if ($disabled):?>Array must be <span class="strong big">Stopped</span> to change<?endif;?>
+: <input type="submit" name="changeShare" value="Apply" disabled><input type="button" value="Done" onclick="done()"><?if ($disabled):?>Array must be <span class="strong big">Stopped</span> to change<?endif;?>
 </form>
