--- a/plugins/dynamix/SMBActiveDirectory.page
+++ b/plugins/dynamix/SMBActiveDirectory.page
@@ -4,8 +4,8 @@ Tag="list-ul"
 Cond="($var['shareSMBEnabled']=='ads')"
 ---
 <?PHP
-/* Copyright 2005-2017, Lime Technology
- * Copyright 2012-2017, Bergware International.
+/* Copyright 2005-2018, Lime Technology
+ * Copyright 2012-2018, Bergware International.
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License version 2,
@@ -48,5 +48,5 @@ AD initial group:
 : <input type="text" name="shareInitialGroup" maxlength="40" value="<?=htmlspecialchars($var['shareInitialGroup'])?>">
 
 &nbsp;
-: <input type="submit" name="changeShare" value="Apply"><input type="button" value="Done" onclick="done()">
+: <input type="submit" name="changeShare" value="Apply" disabled><input type="button" value="Done" onclick="done()">
 </form>
