--- a/plugins/dynamix/ShareSettings.page
+++ b/plugins/dynamix/ShareSettings.page
@@ -5,8 +5,8 @@ Icon="share-settings.png"
 Tag="share-alt-square"
 ---
 <?PHP
-/* Copyright 2005-2017, Lime Technology
- * Copyright 2012-2017, Bergware International.
+/* Copyright 2005-2018, Lime Technology
+ * Copyright 2012-2018, Bergware International.
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License version 2,
@@ -121,5 +121,5 @@ Tunable (enable Direct IO):
 > *Auto* selects No.
 
 &nbsp;
-: <input type="submit" name="changeShare" value="Apply" <?=$disabled?>><input type="button" value="Done" onclick="done()"><?if ($disabled):?>Array must be <span class="strong big">Stopped</span> to change<?endif;?>
+: <input type="submit" name="changeShare" value="Apply" disabled><input type="button" value="Done" onclick="done()"><?if ($disabled):?>Array must be <span class="strong big">Stopped</span> to change<?endif;?>
 </form>
