--- a/plugins/dynamix.apcupsd/UPSsettings.page
+++ b/plugins/dynamix.apcupsd/UPSsettings.page
@@ -5,9 +5,9 @@ Icon="dynamix.apcupsd.png"
 Tag="battery-3"
 ---
 <?PHP
-/* Copyright 2005-2017, Lime Technology
+/* Copyright 2005-2018, Lime Technology
  * Copyright 2015, Dan Landon.
- * Copyright 2015, Bergware International.
+ * Copyright 2012-2018, Bergware International.
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License version 2,
@@ -150,5 +150,5 @@ Turn off UPS after shutdown:
 > Set to *Yes* to turn off the power to the UPS after a shutdown.
 
 <input type="submit" name="#default" value="Default">
-: <input type="submit" name="#apply" value="Apply"><input type="button" value="Done" onclick="done()">
+: <input type="submit" name="#apply" value="Apply" disabled><input type="button" value="Done" onclick="done()">
 </form>
