--- a/plugins/dynamix/AFP.page
+++ b/plugins/dynamix/AFP.page
@@ -4,8 +4,8 @@ Icon="apple-logo.png"
 Tag="apple"
 ---
 <?PHP
-/* Copyright 2005-2017, Lime Technology
- * Copyright 2012-2017, Bergware International.
+/* Copyright 2005-2018, Lime Technology
+ * Copyright 2012-2018, Bergware International.
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License version 2,
@@ -36,7 +36,7 @@ Connected users:
     endif;?>
 
 &nbsp;
-: <input type="submit" name="changeShare" value="Apply"><input type="button" value="Done" onclick="done()">
+: <input type="submit" name="changeShare" value="Apply" disabled><input type="button" value="Done" onclick="done()">
 </form>
 
 > ### Overview
