--- a/plugins/dynamix/Confirmations.page
+++ b/plugins/dynamix/Confirmations.page
@@ -4,8 +4,8 @@ Icon="confirmations.png"
 Tag="check-square"
 ---
 <?PHP
-/* Copyright 2005-2017, Lime Technology
- * Copyright 2012-2017, Bergware International.
+/* Copyright 2005-2018, Lime Technology
+ * Copyright 2012-2018, Bergware International.
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License version 2,
@@ -44,5 +44,5 @@ Confirm sleep command:
 <?endif;?>
 
 &nbsp;
-: <input type="submit" name="#apply" value="Apply"><input type="button" value="Done" onclick="done()">
+: <input type="submit" name="#apply" value="Apply" disabled><input type="button" value="Done" onclick="done()">
 </form>
