--- a/plugins/dynamix/DisplaySettings.page
+++ b/plugins/dynamix/DisplaySettings.page
@@ -4,8 +4,8 @@ Icon="display-settings.png"
 Tag="desktop"
 ---
 <?PHP
-/* Copyright 2005-2017, Lime Technology
- * Copyright 2012-2017, Bergware International.
+/* Copyright 2005-2018, Lime Technology
+ * Copyright 2012-2018, Bergware International.
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License version 2,
@@ -260,5 +260,5 @@ Temperature unit:
 > Make sure any newly entered values represent the selected temperature unit.
 
 <input type="submit" name="#default" value="Default" onclick="filename='reset'">
-: <input type="submit" name="#apply" value="Apply"><input type="button" value="Done" onclick="done()">
+: <input type="submit" name="#apply" value="Apply" disabled><input type="button" value="Done" onclick="done()">
 </form>
