--- a/plugins/dynamix/FTP.page
+++ b/plugins/dynamix/FTP.page
@@ -4,8 +4,8 @@ Icon="ftp-server.png"
 Tag="globe"
 ---
 <?PHP
-/* Copyright 2005-2017, Lime Technology
- * Copyright 2012-2017, Bergware International.
+/* Copyright 2005-2018, Lime Technology
+ * Copyright 2012-2018 Bergware International.
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License version 2,
@@ -52,7 +52,7 @@ FTP user(s):
 > **Note:** do not enter user name `root` since this may cause problems in the future.
 
 &nbsp;
-: <input type="submit" value="Apply"><input type="button" value="Done" onclick="done()">
+: <input type="submit" value="Apply" disabled><input type="button" value="Done" onclick="done()">
 
 </form>
 
