--- a/plugins/dynamix/NFS.page
+++ b/plugins/dynamix/NFS.page
@@ -4,8 +4,8 @@ Icon="linux-logo.png"
 Tag="linux"
 ---
 <?PHP
-/* Copyright 2005-2017, Lime Technology
- * Copyright 2012-2017, Bergware International.
+/* Copyright 2005-2018, Lime Technology
+ * Copyright 2012-2018, Bergware International.
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License version 2,
@@ -59,5 +59,5 @@ Tunable (fuse_remember):
 > files/directories you access via NFS this may or may not lead to out-of-memory conditions.
 
 &nbsp;
-: <input type="submit" name="changeShare" value="Apply"><input type="button" value="Done" onclick="done()">
+: <input type="submit" name="changeShare" value="Apply" disabled><input type="button" value="Done" onclick="done()">
 </form>
