--- a/plugins/dynamix/NetworkRules.page
+++ b/plugins/dynamix/NetworkRules.page
@@ -4,8 +4,8 @@ Tag="tags"
 Cond="file_exists('/boot/config/network-rules.cfg')"
 ---
 <?PHP
-/* Copyright 2017, Lime Technology
- * Copyright 2017, Bergware International.
+/* Copyright 2018, Lime Technology
+ * Copyright 2018, Bergware International.
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License version 2,
@@ -70,7 +70,7 @@ Interface <?=$eth?>:
 <?endforeach;?>
 
 &nbsp;
-: <input type="submit" value="Apply"><input type="button" value="Done" onclick="done()">
+: <input type="submit" value="Apply" disabled><input type="button" value="Done" onclick="done()">
 </form>
 
 > The interface assignment rules can be changed here and might be necessary to set the preferred interface for managing unRAID - *use with care, usually there is no need to change*.
