--- a/plugins/dynamix/ParityCheck.page
+++ b/plugins/dynamix/ParityCheck.page
@@ -3,8 +3,8 @@ Title="Parity Check"
 Tag="calendar"
 ---
 <?PHP
-/* Copyright 2012-2017, Bergware International.
- * Copyright 2005-2017, Lime Technology
+/* Copyright 2012-2018, Bergware International.
+ * Copyright 2005-2018, Lime Technology
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License version 2,
@@ -189,5 +189,5 @@ Write corrections to parity disk:
 > Choose here whether any parity errors found during the check, need to be corrected on the parity disk or not.
 
 &nbsp;
-: <input type="submit" name="#apply" value="Apply"><input type="button" value="Done" onclick="done()"></td>
+: <input type="submit" name="#apply" value="Apply" disabled><input type="button" value="Done" onclick="done()"></td>
 </form>
