--- a/plugins/dynamix/SMBExtras.page
+++ b/plugins/dynamix/SMBExtras.page
@@ -4,8 +4,8 @@ Cond="($var['shareSMBEnabled']!='no')"
 Tag="share-alt-square"
 ---
 <?PHP
-/* Copyright 2017, Lime Technology
- * Copyright 2017, Bergware International.
+/* Copyright 2018, Lime Technology
+ * Copyright 2018, Bergware International.
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License version 2,
@@ -30,7 +30,7 @@ Samba extra configuration:
 : <textarea spellcheck="false" cols="80" rows="22" maxlength="2048" name="text" style="font-family:bitstream;width:66%"><?=htmlspecialchars($text)?></textarea>
 
 &nbsp;
-: <input type="submit" value="Apply"/><input type="button" value="Done" onclick="done()">
+: <input type="submit" value="Apply" disabled><input type="button" value="Done" onclick="done()">
 
 > Click the **Apply** button to commit the current edits.  Click **Reset** to
 > undo any changes you make (before Saving). Click **Done** to exit this page.
