--- a/plugins/dynamix/SecurityAFP.page
+++ b/plugins/dynamix/SecurityAFP.page
@@ -4,8 +4,8 @@ Tag="apple"
 Cond="(($var['shareAFPEnabled']!='no') && (isset($name)?array_key_exists($name,$sec_afp):0))"
 ---
 <?PHP
-/* Copyright 2005-2017, Lime Technology
- * Copyright 2012-2017, Bergware International.
+/* Copyright 2005-2018, Lime Technology
+ * Copyright 2012-2018, Bergware International.
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License version 2,
@@ -124,7 +124,7 @@ Security:
 > read/write (or have no access) according their access right for the share on the server.
 
 &nbsp;
-: <input type="submit" name="changeShareSecurityAFP" value="Apply"><input type="button" value="Done" onclick="done()">
+: <input type="submit" name="changeShareSecurityAFP" value="Apply" disabled><input type="button" value="Done" onclick="done()">
 </form>
 
 <?if ($sec_afp[$name]['security'] == 'secure'):?>
@@ -172,7 +172,7 @@ foreach ($rows as $row)echo $row;
 <?input_secure_users($sec_afp);?>
 
 &nbsp;
-: <input type="submit" name="changeShareAccessAFP" value="Apply"><input type="button" value="Done" onclick="done()">
+: <input type="submit" name="changeShareAccessAFP" value="Apply" disabled><input type="button" value="Done" onclick="done()">
 </form>
 
 <?elseif ($sec_afp[$name]['security'] == 'private'):?>
@@ -220,7 +220,7 @@ foreach($rows as $row) echo $row;
 <?input_private_users($sec_afp);?>
 
 &nbsp;
-: <input type="submit" name="changeShareAccessAFP" value="Apply"><input type="button" value="Done" onclick="done()">
+: <input type="submit" name="changeShareAccessAFP" value="Apply" disabled><input type="button" value="Done" onclick="done()">
 </form>
 <?endif;?>
 
