--- a/plugins/dynamix.vm.manager/VMSettings.page
+++ b/plugins/dynamix.vm.manager/VMSettings.page
@@ -64,7 +64,7 @@ foreach ($arrSyslinuxCfg as &$strSyslinuxCfg) {
 	.fileTree {
 		width: 305px;
 		max-height: 150px;
-		overflow: scroll;
+		overflow-y: scroll;
 		position: absolute;
 		z-index: 100;
 		display: none;
