--- a/plugins/dynamix/styles/default-gray.css
+++ b/plugins/dynamix/styles/default-gray.css
@@ -241,10 +241,10 @@ div.vmtemplate{height:120px;width:120px;border:1px solid #0C0F0B}
 div.vmtemplate img{margin-top:20px}
 div.up{margin-top:-20px;border:1px solid #0C0F0B;padding:4px 6px;overflow:auto}
 div.spinner{height:32px;width:32px;margin:24px auto;
--webkit-animation: rotation .6s infinite linear;
--moz-animation: rotation .6s infinite linear;
--o-animation: rotation .6s infinite linear;
-animation: rotation .6s infinite linear;
+-webkit-animation: fa-spin .6s infinite linear;
+-moz-animation: fa-spin .6s infinite linear;
+-o-animation: fa-spin .6s infinite linear;
+animation: fa-spin .6s infinite linear;
 border-left:6px solid rgba(0,174,239,.15);
 border-right:6px solid rgba(0,174,239,.15);
 border-bottom:6px solid rgba(0,174,239,.15);
