--- a/plugins/dynamix.vm.manager/VMSettings.page
+++ b/plugins/dynamix.vm.manager/VMSettings.page
@@ -350,9 +350,9 @@ foreach ($arrSyslinuxCfg as &$strSyslinuxCfg) {
 </form>
 <?endif;?>
 
-<script src="/webGui/javascript/jquery.filetree.js"></script>
-<script src="/webGui/javascript/jquery.switchbutton.js"></script>
-<script src="/plugins/dynamix.vm.manager/javascript/dynamix.vm.manager.js"></script>
+<script src="<?autov('/webGui/javascript/jquery.filetree.js')?>"></script>
+<script src="<?autov('/webGui/javascript/jquery.switchbutton.js')?>"></script>
+<script src="<?autov('/plugins/dynamix.vm.manager/javascript/dynamix.vm.manager.js')?>"></script>
 <script>
 $(function(){
 	$("#applyBtn").click(function(){
