--- a/plugins/dynamix/styles/default-gray.css
+++ b/plugins/dynamix/styles/default-gray.css
@@ -250,8 +250,7 @@ border-right:6px solid rgba(0,174,239,.15);
 border-bottom:6px solid rgba(0,174,239,.15);
 border-top:6px solid rgba(0,174,239,.8);
 border-radius:100%;}
-div.spinner.fixed{position:absolute;left:47%;top:40px}
-div.spinner.hide{display:none}
+div.spinner.fixed{display:none;position:absolute;left:47%;top:40px}
 pre.up{margin-top:0}
 pre{border:1px solid #0C0F0B;font-family:bitstream;font-size:12px;padding:0;overflow:auto;margin-bottom:10px;padding:10px}
 iframe#progressFrame{position:fixed;bottom:32px;left:60px;margin:0;padding:8px 8px 0 8px;width:100%;height:12px;line-height:12px;border-style:none;overflow:hidden;font-family:bitstream;font-size:11px;color:#808080;white-space:nowrap;z-index:-2}
