--- a/plugins/dynamix.vm.manager/VMMachines.page
+++ b/plugins/dynamix.vm.manager/VMMachines.page
@@ -110,6 +110,7 @@ div.Panel:hover{background-color:unset;}
 div.PanelText{display:none;}
 th.five{width:5%}
 </style>
+<div class="spinner fixed"></div>
 <table id="kvm_table" class="tablesorter shift">
 <thead><tr><th><i class="fa fa-th-list"></i></th><th>Name</th><th>Description</th><th>CPUs</th><th>Memory</th><th>vDisks</th><th>Graphics</th><th class="five">Autostart</th><th class="five" style="text-align:right;padding-right:24px"><a href="#" style="cursor:hand" onclick="resetSorting()" title="Reset sorting"><i class="fa fa-sort"></i></a></th></tr></thead>
 <tbody id="kvm_list"><tr><td colspan='9'><div class="spinner"></div></td></tr></tbody>
@@ -141,8 +142,9 @@ function resetSorting() {
   $.post('/plugins/dynamix.vm.manager/include/UserPrefs.php',{reset:true},function(){loadlist();});
 }
 function loadlist() {
-  $.get('/plugins/dynamix.vm.manager/include/VMMachines.php',function(d) {
+  $.get('/plugins/dynamix.vm.manager/include/VMMachines.php',{show:$.cookie('vmshow')},function(d) {
     var data = d.split(/\0/);
+    $('div.spinner').hide('slow');
     $('#kvm_list').html(data[0]);
     $('head').append('<script>'+data[1]+'<\/script>');
 <?if ($display['resize']):?>
