--- a/plugins/dynamix/styles/default-white.css
+++ b/plugins/dynamix/styles/default-white.css
@@ -28,11 +28,11 @@ input:hover[type=button],input:hover[type=reset],input:hover[type=submit],button
 input:active[type=button],input:active[type=reset],input:active[type=submit],button:active{border-color:#6AB034;box-shadow:inset 0 0 8px 4px #548C29,0 1px 0 0 #E0E0E0}
 input[disabled],button[disabled],input:hover[type=button][disabled],input:hover[type=reset][disabled],input:hover[type=submit][disabled],button:hover[disabled],input:active[type=button][disabled],input:active[type=reset][disabled],input:active[type=submit][disabled],button:active[disabled],textarea[disabled]{color:#808080;border-color:#F0F0F0;background:linear-gradient(#F0F0F0,#F8F8F8);background:-webkit-radial-gradient(#F0F0F0,#F8F8F8);cursor:default}
 input::-webkit-input-placeholder{color:#00529B}
-select{font-family:arimo;font-size:12px;min-width:150px;max-width:320px;padding:4px 6px;margin:0 10px 0 0;border:none;border-radius:4px;box-shadow:0 2px 0 #E0E0E0,inset 0 -1px #FFFFFF;background:#F8F8F8;outline:none;display:inline-block;cursor:pointer}
+select{font-family:arimo;font-size:12px;min-width:150px;max-width:320px;padding:4px 6px;margin:0 10px 0 0;border:none;border-radius:4px;box-shadow:0 2px 0 #E0E0E0,inset 0 -1px #FFFFFF;color:#303030;background:#F8F8F8;outline:none;display:inline-block;cursor:pointer}
 select[disabled]{background-color:#F8F8F8;cursor:default;box-shadow:0 2px 0 #F0F0F0,inset 0 -1px #FFFFFF}
 select[name=enter_view]{padding:0;float:right}
 select[name=enter_share]{padding:0;float:right}
-select option{background-color:#FFFFFF}
+select option{color:#303030;background-color:#F8F8F8}
 select.narrow{min-width:69px}
 select.auto{min-width:auto}
 select.slot{min-width:400px;max-width:400px}
